build scripts / love.js compatibility
FIXMEs indicate what broke when compiling to js... luckily only the repl and how i pass around the window dimensions

also had to reduce board size / canvas resolution to get a solid 60 FPS on my old laptop in browser

will fix the non-repl FIXMEs for the jam... as well as find a sweet spot of high resolution gameplay and web FPS

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 *~
-/releases
-/buildtools/appimage/love-prepared/
-/buildtools/appimage/*.AppImage
-/buildtools/appimage/squashfs-root
+/bin
+/bld/appimage/love-prepared/
+/bld/appimage/*.AppImage
+/bld/appimage/squashfs-root
 *.private
