--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
     branches: [ master ]
 jobs:
   build:
+    runs-on: ubuntu-latest
     steps:
     - name: build application
       run: make linux
